2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* SVNUpdater.cs: Store logs and diffs as files.

