@@ -1,5 +1,10 @@
 2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Updater.cs: We need the workaround for bug #499792
+	 here too.
+
+2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* SVNUpdater.cs: Store logs and diffs as files.
 
 
